--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/cypress open"
   },
   "author": "",
   "license": "ISC",
@@ -12,3 +12,4 @@
     "cypress": "^12.5.1"
   }
 }
+
